# bang_c

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.gemma-local  Dockerfile.gemma-local.kaniko  Dockerfile.gemma-mtp  Dockerfile.gemma-mtp.kaniko  Dockerfile.qwen-selfconsist.kaniko  Dockerfile.qwen-submission  Dockerfile.rag-gated.kaniko  README.md  SECURITY.md  inference.sh  install.ps1  install.sh  neko-core.ps1  neko.ps1  predict.py  pyproject.toml  requirements-local.txt
.github/: pull_request_template.md
configs/: default.json
docker/: neko-entrypoint.sh  qwen-selfconsist.neko-core.json  rag-gated.neko-core.json
docs/: AGENTIC-CLI-DEVELOPER-GUIDE.md  CODEX-ACCURACY-RESEARCH-MISSION.md  Neko-Core-Thuyet-minh-phuong-phap.pptx  bang-c-innovator-strategy.md  distribution-domain.md  evaluation-rubric.md  harness-architecture.md  local-gemma-runtime.md  method-writeup-vi.md  method-writeup.md  release-process.md  runpod-gpu-selection.md  runpod-operations.md  submission-readiness.md
notes/: 2026-06-10-architecture-proposal.md  2026-06-10-baseline-85.53-diagnosis.md  2026-06-13-guardrail-fix-and-accuracy-research-frame.md  2026-06-16-le5b-rules-and-model-policy.md  2026-06-18-finetune-verdict.md  2026-06-18-rag-lever-analysis.md  2026-06-26-r2-submission-contract-fix.md  EXECUTOR-PLAYBOOK.md  NEXT-SESSION-PROMPT-2026-06-15.md  README.md  RESUME-HERE.md  adjudicated-self-consistency-2026-06-13.md  codex-webmax-probe-2026-06-13.md  codex-webmax-probe-r2-2026-06-13.md  codex-webmax-probe-r3-2026-06-13.md  fable5-handoff-prompt.md  (+38 more)
(+94 files in other folders)
