[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bang-c-harness"
version = "0.2.0"
description = "Config-first inference harness for HackAIthon 2026 Bang C"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.4"
]

[project.scripts]
bang-c = "hackaithon_c.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hackaithon_c = []
