[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neko-core"
version = "0.4.0"
description = "Neko Core config-first inference harness for HackAIthon 2026 Bang C"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests==2.34.2"
]

[project.optional-dependencies]
local = [
  "huggingface-hub>=0.32,<1",
  "llama-cpp-python>=0.3.9,<0.4"
]

[project.scripts]
neko = "hackaithon_c.run:main"
neko-core = "hackaithon_c.run:main"
bang-c = "hackaithon_c.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hackaithon_c = ["resources/*.json"]
